--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>APJ INTERNATIONAL SCHOOL</title>
+<title>APJ INTERNATIONAL </title>
 </head>
 <style>
 table, th, td {
