--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ table, th, td {
   border:1px solid black;
 }
 </style>
-<body>
+<body style="background-color:#ADD8E6 ;">
 <p style="text-align:center;">APJ INTERNATIONAL SCHOOL WELCOMES YOU! </p>
 <p style="text-align:center;">Student Details for admission to the 11th Grade</p>
 <form>
