--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>APJ INTERNATIONAL SCHOOL </title>
+<title>APJ INTERNATIONAL SCHOOL</title>
 </head>
 <style>
 table, th, td {
   border:1px solid black;
 }
+
+.boxed {
+  border: 1px solid black ;
+}
 </style>
 <body style="background-color:#ADD8E6 ;">
-<p style="text-align:center;">APJ INTERNATIONAL SCHOOL WELCOMES YOU! </p>
+<p style="text-align:center;"><b>APJ INTERNATIONAL SCHOOL WELCOMES YOU! </b></p>
 <p style="text-align:center;">Student Details for admission to the 11th Grade</p>
+<div class="boxed">
+<article>
+  <header>
+    <h1>What do we at APJ International aim to provide?</h1>
+    <p>Our mission:</p>
+  </header>
+  <p>
+Our mission is to provide opportunities to create Global Citizens and Leaders of tomorrow through traditional values of love, empathy, discipline and respect. And to train the skills required for successful interaction with other individuals .</p>
+</article>
+</div>
+<br></br>
 <form>
 <label> Firstname </label>         
 <input type="text" name="firstname" size="15"/> <br> <br>  
@@ -88,5 +103,10 @@ Phone Number:
 
 </form>
 <button type="submit" form="form1" value="Submit">Submit</button>
+<footer>
+  <p>Author: Nanditha Nambiar</p>
+  <p><a href="mailto:nn48@example.com">nn48@example.com</a></p>
+</footer>
+
 </body>
 </html>
