--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>APJ INTERNATIONAL SCHOOL</title>
+<title>GG INTERNATIONAL SCHOOL</title>
 </head>
 <style>
 table, th, td {
@@ -13,12 +13,12 @@ table, th, td {
 }
 </style>
 <body style="background-color:#ADD8E6 ;">
-<p style="text-align:center;"><b>APJ INTERNATIONAL SCHOOL WELCOMES YOU! </b></p>
+<p style="text-align:center;"><b>GG INTERNATIONAL SCHOOL WELCOMES YOU! </b></p>
 <p style="text-align:center;">Student Details for admission to the 11th Grade</p>
 <div class="boxed">
 <article>
   <header>
-    <h1>What do we at APJ International aim to provide?</h1>
+    <h1>What do we at GG International aim to provide?</h1>
     <p>Our mission:</p>
   </header>
   <p>
