--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
  <a href="contact.html">Contact Us</a>
  </nav>
  <h1>About Page</h1>
- <iframe width="560" height="315" src="https://www.youtube.com/embed/mca8HjLpBIg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</video>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/eDNV4zLnDF8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ </video>
 </body>
 </html>
