--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,9 @@
  <a href="contact.html">Contact Us</a>
  </nav>
  <h1>Contact Page</h1>
+ <p> 174 - 177, Swarganga, Near The Muslim Co-operative Bank, Vallabh Nagar, Pimpri, Pune - 411018</p>
  <p><a href="mailto:apjis@gmail.com">mailto:apjis@gmail.com</a></p>
- <p>Telephone Number: **********</p>
+ <p>Telephone Number:020 - 274023457, +91 9923 170 221,
+ +91 9503 044 770, 1800 3012 6382 </p>
 </body>
 </html>
