--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@ Phone Number:
 
 </form>
 <button type="submit" form="form1" value="Submit">Submit</button>
+ <a href="index.html">Home</a>
+ <a href="about.html">About Us</a>
+ <a href="contact.html">Contact Us</a>
 <footer>
   <p>Author: Nanditha Nambiar</p>
   <p><a href="mailto:nn48@example.com">nn48@example.com</a></p>
