--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
  <title>Contact Page</title>
 </head>
 <body>
+ <body style="background-color:#ADD8E6 ;">
  <nav>
  <a href="index.html">Home</a>
  <a href="about.html">About Us</a>
