--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@ table, th, td {
 }
 </style>
 <body style="background-color:#ADD8E6 ;">
+  <nav>
+ <a href="index.html">Home</a>
+ <a href="about.html">About Us</a>
+ <a href="contact.html">Contact Us</a>
+ </nav>
+ <h1>Home Page</h1>
 <p style="text-align:center;"><b>GG INTERNATIONAL SCHOOL WELCOMES YOU! </b></p>
 <p style="text-align:center;">Student Details for admission to the 11th Grade</p>
 <div class="boxed">
@@ -103,9 +109,6 @@ Phone Number:
 
 </form>
 <button type="submit" form="form1" value="Submit">Submit</button>
- <a href="index.html">Home</a>
- <a href="about.html">About Us</a>
- <a href="contact.html">Contact Us</a>
 <footer>
   <p>Author: Nanditha Nambiar</p>
   <p><a href="mailto:nn48@example.com">nn48@example.com</a></p>
