--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>GG INTERNATIONAL SCHOOL</title>
+  <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D100064158602564&imgrefurl=https%3A%2F%2Fwww.facebook.com%2FGGInternationalSchool&tbnid=e0nLVyVJb6v7_M&vet=12ahUKEwiko9CO8Jb5AhXl_TgGHWCDAzgQMygAegUIARC5AQ..i&docid=VXEIvhPOphXpFM&w=763&h=763&q=gg%20international%20school%20logo&ved=2ahUKEwiko9CO8Jb5AhXl_TgGHWCDAzgQMygAegUIARC5AQ" class="floatRight">
 </head>
 <style>
 table, th, td {
