--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>GG INTERNATIONAL SCHOOL</title>
-  <img src="ggintschool.jpg" class="floatRight">
+  <img src="ggintschool.jpg" width=”3000″ height=”3000″ class="floatRight">
 </head>
 <style>
 table, th, td {
@@ -19,7 +19,6 @@ table, th, td {
  <a href="about.html">About Us</a>
  <a href="contact.html">Contact Us</a>
  </nav>
- <h1>Home Page</h1>
 <p style="text-align:center;"><b>GG INTERNATIONAL SCHOOL WELCOMES YOU! </b></p>
 <p style="text-align:center;">Student Details for admission to the 11th Grade</p>
 <div class="boxed">
