--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,10 @@
  </nav>
  <h1>Contact Page</h1>
  <p> 174 - 177, Swarganga, Near The Muslim Co-operative Bank, Vallabh Nagar, Pimpri, Pune - 411018</p>
- <p><a href="mailto:apjis@gmail.com">mailto:apjis@gmail.com</a></p>
- <p>Telephone Number:020 - 274023457, +91 9923 170 221,
+ <p><a href="mailto:gis@gmail.com">mailto:gis@gmail.com</a></p>
+ <p>Telephone Number: 020 - 274023457, +91 9923 170 221,
  +91 9503 044 770, 1800 3012 6382 </p>
+  <br></br>
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.014272747353!2d73.81849931484426!3d18.61842778735201!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2b88a8500ccc9%3A0x54bab7f2991684a2!2sGG%20International%20School!5e0!3m2!1sen!2sin!4v1658854326647!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
